--- a/index.html
+++ b/index.html
@@ -18,7 +18,11 @@
             <li><a href="contact.html">Contact</a></li>
           </ul>
         </div>
-      </nav>
+    </nav>
+    <div class="container">
+        
+    </div>
+
 
     
 </body>
