mods2 html footers/mods2 css files

--- a/index.html
+++ b/index.html
@@ -4,11 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Wilmar Celestin</title>
+    <title>Wilmar Celestin Bio</title>
     <link rel="stylesheet" href="assets/css/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
 </head>
-<main id="main">
 <body id="body">
     <nav id="nav">
         <div class="nav-wrapper">
@@ -21,9 +20,9 @@
         </div>
     </nav>
     <div id="container" class="container">
-        Hello
+        Bio
     </div>
-    <footer class="page-footer">
+    <footer id="footer" class="page-footer">
       <div class="container">
         <div class="row">
           <div class="col l6 s12">
@@ -35,7 +34,6 @@
             <ul>
               <li><a class="grey-text text-lighten-3" href="#!">LinkedIn</a></li>
               <li><a class="grey-text text-lighten-3" href="#!">GitHub</a></li>
-              
             </ul>
           </div>
         </div>
@@ -43,12 +41,12 @@
       <div class="footer-copyright">
         <div class="container">
         © 2020 Copyright Wilmar Celestin
-        <a class="grey-text text-lighten-4 right" href="#!">More Links</a>
+          <a id="footerLinks" class="grey-text text-lighten-4 right" href="contact.html">Contact</a>
+          <a id="footerLinks" class="grey-text text-lighten-4 right" href="portfolio.html">Portfolio</a>
+          <a id="footerLinks" class="grey-text text-lighten-4 right" href="index.html">Bio</a>
         </div>
       </div>
     </footer>
-
-
-</main>    
+   
 </body>
 </html>
