--- a/contact.html
+++ b/contact.html
@@ -11,7 +11,7 @@
 <body>
     <nav id="nav">
         <div class="nav-wrapper">
-          <a href="#" class="brand-logo">Wilmar Celestin</a>
+          <a href="#" class="brand-logo">Wilmar Celestin Contact</a>
           <ul id="nav-mobile" class="right hide-on-med-and-down">
             <li><a href="index.html">Bio</a></li>
             <li><a href="portfolio.html">Portfolio</a></li>
@@ -36,23 +36,30 @@
             </div>
         </div>
     </div>
-    <footer class="page-footer">
+    <footer id="footer" class="page-footer">
+      <div class="container">
+        <div class="row">
+          <div class="col l6 s12">
+            <h5 class="white-text">Footer Content</h5>
+            <p class="grey-text text-lighten-4">You can use rows and columns here to organize your footer content.</p>
+          </div>
+          <div class="col l4 offset-l2 s12">
+            <h5 class="white-text">Contact Links</h5>
+            <ul>
+              <li><a class="grey-text text-lighten-3" href="#!">LinkedIn</a></li>
+              <li><a class="grey-text text-lighten-3" href="#!">GitHub</a></li>
+            </ul>
+          </div>
+        </div>
+      </div>
+      <div class="footer-copyright">
         <div class="container">
-          <div class="row">
-            <div class="col l4 offset-l2 s12">
-              <h5 class="white-text">Links</h5>
-              <ul>
-                <li><a class="grey-text text-lighten-3" href="#!">Linkedin</a></li>
-                <li><a class="grey-text text-lighten-3" href="#!">GitHub</a></li>
-              </ul>
-            </div>
-          </div>
+        © 2020 Copyright Wilmar Celestin
+          <a id="footerLinks" class="grey-text text-lighten-4 right" href="contact.html">Contact</a>
+          <a id="footerLinks" class="grey-text text-lighten-4 right" href="portfolio.html">Portfolio</a>
+          <a id="footerLinks" class="grey-text text-lighten-4 right" href="index.html">Bio</a>
         </div>
-        <div class="footer-copyright">
-          <div class="container">
-          © 2020 Copyright 
-          </div>
-        </div>
-      </footer>
+      </div>
+    </footer>
 </body>
 </html>
