--- a/portfolio.html
+++ b/portfolio.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Portfolio</title>
+    <title>Wilmar Celestin Portfolio</title>
     <link rel="stylesheet" href="assets/css/portfolio.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
 </head>
 <body>
-    <nav>
+    <nav id="nav">
         <div class="nav-wrapper">
           <a href="#" class="brand-logo">Wilmar Celestin</a>
           <ul id="nav-mobile" class="right hide-on-med-and-down">
@@ -19,9 +19,34 @@
           </ul>
         </div>
     </nav>
-    <div class="container">
-      
+    <div id="container" class="container">
+      Portfolio
     </div>
+    <footer id="footer" class="page-footer">
+      <div class="container">
+        <div class="row">
+          <div class="col l6 s12">
+            <h5 class="white-text">Footer Content</h5>
+            <p class="grey-text text-lighten-4">You can use rows and columns here to organize your footer content.</p>
+          </div>
+          <div class="col l4 offset-l2 s12">
+            <h5 class="white-text">Contact Links</h5>
+            <ul>
+              <li><a class="grey-text text-lighten-3" href="#!">LinkedIn</a></li>
+              <li><a class="grey-text text-lighten-3" href="#!">GitHub</a></li>
+            </ul>
+          </div>
+        </div>
+      </div>
+      <div class="footer-copyright">
+        <div class="container">
+        © 2020 Copyright Wilmar Celestin
+        <a id="footerLinks" class="grey-text text-lighten-4 right" href="contact.html">Contact</a>
+        <a id="footerLinks" class="grey-text text-lighten-4 right" href="portfolio.html">Portfolio</a>
+        <a id="footerLinks" class="grey-text text-lighten-4 right" href="index.html">Bio</a>
+        </div>
+      </div>
+    </footer>
 
 
 </body>
