major mod2 css/html pages&added img

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body id="body">
     <nav id="nav">
         <div class="nav-wrapper">
-          <a href="#" class="brand-logo">Wilmar Celestin</a>
+          <a href="index.html" class="brand-logo">Wilmar Celestin</a>
           <ul id="nav-mobile" class="right hide-on-med-and-down">
             <li><a href="index.html">Bio</a></li>
             <li><a href="portfolio.html">Portfolio</a></li>
@@ -20,7 +20,15 @@
         </div>
     </nav>
     <div id="container" class="container">
-        Bio
+        <h4>About Me</h4>
+        <div class="row">
+          <div class="col s3">
+            <img id="profilePic" src="../officialPortfolio/assets/images/IMG_0970.JPG" alt="profilePicture">
+          </div>
+          <div class="col s9">
+            <p>Hello my name is Wilmar Celestin and I am 26 years old. I work for OCBCC Parks & Recreation as a Recreational Leader, where I organize and facilitate events for the community. I graduated from Keiser University with an A.S. degree in Information Technology. I am currently attending UCF Coding Boot Camp to learn how be a full stack web developer. In my spare time I enjoy playing basketball, video games and making music.</p>
+          </div>
+        </div>
     </div>
     <footer id="footer" class="page-footer">
       <div class="container">
