--- a/portfolio.html
+++ b/portfolio.html
@@ -7,11 +7,12 @@
     <title>Wilmar Celestin Portfolio</title>
     <link rel="stylesheet" href="assets/css/portfolio.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
 </head>
 <body>
     <nav id="nav">
         <div class="nav-wrapper">
-          <a href="#" class="brand-logo">Wilmar Celestin</a>
+          <a href="index.html" class="brand-logo">Wilmar Celestin</a>
           <ul id="nav-mobile" class="right hide-on-med-and-down">
             <li><a href="index.html">Bio</a></li>
             <li><a href="portfolio.html">Portfolio</a></li>
@@ -20,7 +21,27 @@
         </div>
     </nav>
     <div id="container" class="container">
-      Portfolio
+      <h4>Project Portfolio</h4>
+      <div class="row">
+        <div class="col s12">
+          <h6>Password Generator</h6>
+          <a href="https://inkagnedo.github.io/passwordGenerator/">
+            <img src="../officialPortfolio/assets/images/passwordGenerator.png" alt="passwordGen">
+          </a>
+        </div>
+        <div class="col s6">
+          <h6>WeatherWay</h6>
+          <a href="https://marcwithac27.github.io/WeatherWay/">
+            <img id="secPic" src="../officialPortfolio/assets/images/weatherWay.png" alt="weatherWay">
+          </a>
+        </div>
+        <div class="col s6">
+          <h6>Code Quiz</h6>
+          <a href="https://inkagnedo.github.io/codeQuiz/">
+            <img id="secPic" src="../officialPortfolio/assets/images/codeQuiz.png" alt="codeQuiz">
+          </a>
+        </div>
+      </div>
     </div>
     <footer id="footer" class="page-footer">
       <div class="container">
@@ -48,6 +69,6 @@
       </div>
     </footer>
 
-
+    <script src="../officialPortfolio/assets/js/jscript.js"></script>
 </body>
 </html>
