--- a/contact.html
+++ b/contact.html
@@ -11,7 +11,7 @@
 <body>
     <nav id="nav">
         <div class="nav-wrapper">
-          <a href="#" class="brand-logo">Wilmar Celestin Contact</a>
+          <a href="index.html" class="brand-logo">Wilmar Celestin</a>
           <ul id="nav-mobile" class="right hide-on-med-and-down">
             <li><a href="index.html">Bio</a></li>
             <li><a href="portfolio.html">Portfolio</a></li>
@@ -20,14 +20,22 @@
         </div>
     </nav>
     <div id="container" class="container">
+        <h4>Send a Message</h4>
         <div class="row">
             <div class="input-field col s6">
-                <input id="name" placeholder="Name" type="text" class="validate">
+              <input id="name" placeholder="Name" type="text" class="validate">
+            </div>
+            <div class="col s6">
+              <h6>Other Contact Links</h6>
+                <ul>
+                  <li><a href="">LinkedIn</a></li>
+                  <li><a href="">GitHub</a></li>
+                </ul>
             </div>
         </div>
         <div class="row">
-            <div class="input-field col s8">
-                <textarea id="message" cols="60" rows="30"></textarea>
+            <div class="input-field col s6">
+                <textarea id="message" placehoder="Enter Message" cols="60" rows="30"></textarea>
             </div>
         </div>
         <div class="row">
@@ -40,8 +48,8 @@
       <div class="container">
         <div class="row">
           <div class="col l6 s12">
-            <h5 class="white-text">Footer Content</h5>
-            <p class="grey-text text-lighten-4">You can use rows and columns here to organize your footer content.</p>
+            <h5 class="white-text"></h5>
+            <p class="grey-text text-lighten-4"></p>
           </div>
           <div class="col l4 offset-l2 s12">
             <h5 class="white-text">Contact Links</h5>
