minor changes to links

--- a/portfolio.html
+++ b/portfolio.html
@@ -24,15 +24,15 @@
       <h4>Project Portfolio</h4>
       <div class="row">
         <div class="col s12">
-          <h6>Password Generator</h6>
-          <a href="https://inkagnedo.github.io/passwordGenerator/">
-            <img src="../officialPortfolio/assets/images/passwordGenerator.png" alt="passwordGen">
+          <h6>WeatherWay</h6>
+          <a href="https://marcwithac27.github.io/WeatherWay/">
+            <img src="../officialPortfolio/assets/images/weatherWay.png" alt="weatheryWay">
           </a>
         </div>
         <div class="col s6">
-          <h6>WeatherWay</h6>
-          <a href="https://marcwithac27.github.io/WeatherWay/">
-            <img id="secPic" src="../officialPortfolio/assets/images/weatherWay.png" alt="weatherWay">
+          <h6>Password Generator</h6>
+          <a href="https://inkagnedo.github.io/passwordGenerator/">
+            <img id="secPic" src="../officialPortfolio/assets/images/passwordGenerator.png" alt="passwordGen">
           </a>
         </div>
         <div class="col s6">
@@ -47,14 +47,14 @@
       <div class="container">
         <div class="row">
           <div class="col l6 s12">
-            <h5 class="white-text">Footer Content</h5>
-            <p class="grey-text text-lighten-4">You can use rows and columns here to organize your footer content.</p>
+            <h5 class="white-text"></h5>
+            <p class="grey-text text-lighten-4"></p>
           </div>
           <div class="col l4 offset-l2 s12">
             <h5 class="white-text">Contact Links</h5>
             <ul>
-              <li><a class="grey-text text-lighten-3" href="#!">LinkedIn</a></li>
-              <li><a class="grey-text text-lighten-3" href="#!">GitHub</a></li>
+              <li><a class="grey-text text-lighten-3" href="https://www.linkedin.com/in/cory-celestin-25a3741a2/">LinkedIn</a></li>
+              <li><a class="grey-text text-lighten-3" href="https://github.com/Inkagnedo">GitHub</a></li>
             </ul>
           </div>
         </div>
@@ -68,7 +68,5 @@
         </div>
       </div>
     </footer>
-
-    <script src="../officialPortfolio/assets/js/jscript.js"></script>
 </body>
 </html>
