--- a/contact.html
+++ b/contact.html
@@ -28,8 +28,8 @@
             <div class="col s6">
               <h6>Other Contact Links</h6>
                 <ul>
-                  <li><a href="">LinkedIn</a></li>
-                  <li><a href="">GitHub</a></li>
+                  <li><a href="https://www.linkedin.com/in/cory-celestin-25a3741a2/">LinkedIn</a></li>
+                  <li><a href="https://github.com/Inkagnedo">GitHub</a></li>
                 </ul>
             </div>
         </div>
@@ -54,8 +54,8 @@
           <div class="col l4 offset-l2 s12">
             <h5 class="white-text">Contact Links</h5>
             <ul>
-              <li><a class="grey-text text-lighten-3" href="#!">LinkedIn</a></li>
-              <li><a class="grey-text text-lighten-3" href="#!">GitHub</a></li>
+              <li><a class="grey-text text-lighten-3" href="https://www.linkedin.com/in/cory-celestin-25a3741a2/">LinkedIn</a></li>
+              <li><a class="grey-text text-lighten-3" href="https://github.com/Inkagnedo">GitHub</a></li>
             </ul>
           </div>
         </div>
