--- a/index.html
+++ b/index.html
@@ -34,14 +34,14 @@
       <div class="container">
         <div class="row">
           <div class="col l6 s12">
-            <h5 class="white-text">Footer Content</h5>
-            <p class="grey-text text-lighten-4">You can use rows and columns here to organize your footer content.</p>
+            <h5 class="white-text"></h5>
+            <p class="grey-text text-lighten-4"></p>
           </div>
           <div class="col l4 offset-l2 s12">
             <h5 class="white-text">Contact Links</h5>
             <ul>
-              <li><a class="grey-text text-lighten-3" href="#!">LinkedIn</a></li>
-              <li><a class="grey-text text-lighten-3" href="#!">GitHub</a></li>
+              <li><a class="grey-text text-lighten-3" href="https://www.linkedin.com/in/cory-celestin-25a3741a2/">LinkedIn</a></li>
+              <li><a class="grey-text text-lighten-3" href="https://github.com/Inkagnedo">GitHub</a></li>
             </ul>
           </div>
         </div>
@@ -54,7 +54,6 @@
           <a id="footerLinks" class="grey-text text-lighten-4 right" href="index.html">Bio</a>
         </div>
       </div>
-    </footer>
-   
+    </footer> 
 </body>
 </html>
