added resume/more contact info

--- a/contact.html
+++ b/contact.html
@@ -28,6 +28,9 @@
             <div class="col s6">
               <h6>Other Contact Links</h6>
                 <ul>
+                  <li>Email: ccelestin44@gmail.com</li>
+                  <li>Phone Number: 321-355-1652</li>
+                  <li><a href="../officialPortfolio/assets/images/Wilmar C Resume.docx">Resume</a></li>
                   <li><a href="https://www.linkedin.com/in/cory-celestin-25a3741a2/">LinkedIn</a></li>
                   <li><a href="https://github.com/Inkagnedo">GitHub</a></li>
                 </ul>
