updated projects page

--- a/portfolio.html
+++ b/portfolio.html
@@ -23,20 +23,30 @@
     <div id="container" class="container">
       <h4>Project Portfolio</h4>
       <div class="row">
-        <div class="col s12">
+        <div class="col s6">
+          <h6>TennisMatchr</h6>
+          <a href="https://github.com/trustedtech/TennisMatchr">(GitHub Repo)</a>
+          <a href="https://tennis-matchr.herokuapp.com/">
+            <img src="../officialPortfolio/assets/images/Screen Shot 2020-04-11 at 8.18.28 AM.png" alt="tennis-matchr">
+          </a>
+        </div>
+        <div class="col s6">
           <h6>WeatherWay</h6>
+          <a href="https://github.com/marcwithac27/WeatherWay">(GitHub Repo)</a>
           <a href="https://marcwithac27.github.io/WeatherWay/">
             <img src="../officialPortfolio/assets/images/weatherWay.png" alt="weatheryWay">
           </a>
         </div>
         <div class="col s6">
           <h6>Password Generator</h6>
+          <a href="https://github.com/Inkagnedo/passwordGenerator">(GitHub Repo)</a>
           <a href="https://inkagnedo.github.io/passwordGenerator/">
             <img id="secPic" src="../officialPortfolio/assets/images/passwordGenerator.png" alt="passwordGen">
           </a>
         </div>
         <div class="col s6">
           <h6>Code Quiz</h6>
+          <a href="https://github.com/Inkagnedo/codeQuiz">(GitHub Repo)</a>
           <a href="https://inkagnedo.github.io/codeQuiz/">
             <img id="secPic" src="../officialPortfolio/assets/images/codeQuiz.png" alt="codeQuiz">
           </a>
